--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
     "lint:fix": "bun run eslint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "animejs": "^4.1.3",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.525.0",
-    "motion": "^12.23.6",
+    "lucide-react": "^0.542.0",
+    "motion": "^12.23.12",
     "next": "15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "react-use-measure": "^2.1.7",
+    "server-only": "^0.0.1",
+    "tailwind-merge": "^3.3.1",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
