--- a/package.json
+++ b/package.json
@@ -20,24 +20,26 @@
     "lucide-react": "^0.542.0",
     "motion": "^12.23.12",
     "next": "15.4.2",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-use-measure": "^2.1.7",
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.3.1",
+    "usehooks-ts": "^3.1.1",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9.34.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.1.13",
+    "@types/node": "^20.19.13",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "eslint": "^9.35.0",
     "eslint-config-next": "15.4.2",
     "neostandard": "^0.12.2",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.5",
-    "typescript": "^5"
+    "tailwindcss": "^4.1.13",
+    "tw-animate-css": "^1.3.8",
+    "typescript": "^5.9.2"
   }
 }
