update:expansive-component

--- a/components.json
+++ b/components.json
@@ -18,6 +18,7 @@
     "hooks": "@/hooks"
   },
   "registries": {
+    "@shadcn-ui": "https://ui.shadcn.com/r/styles/new-york-v4/{name}.json",
     "@kokonutui": "https://kokonutui.com/r/{name}.json",
     "@smoothui": "https://smoothui.dev/r/{name}.json",
     "@cult-ui": "https://cult-ui.com/r/{name}.json"
