--- a/components.json
+++ b/components.json
@@ -10,6 +10,7 @@
     "cssVariables": true,
     "prefix": ""
   },
+  "iconLibrary": "radix",
   "aliases": {
     "components": "@/components",
     "utils": "@/lib/utils",
@@ -21,6 +22,7 @@
     "@shadcn-ui": "https://ui.shadcn.com/r/styles/new-york-v4/{name}.json",
     "@kokonutui": "https://kokonutui.com/r/{name}.json",
     "@smoothui": "https://smoothui.dev/r/{name}.json",
-    "@cult-ui": "https://cult-ui.com/r/{name}.json"
+    "@cult-ui": "https://cult-ui.com/r/{name}.json",
+    "@animate-ui": "https://animate-ui.com/r/{name}.json"
   }
 }
