--- a/package.json
+++ b/package.json
@@ -10,16 +10,25 @@
     "lint:fix": "bun run eslint"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.27.16",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.3.0",
+    "@t3-oss/env-nextjs": "^0.13.8",
     "animejs": "^4.1.3",
+    "chalk": "^5.6.2",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "firebase": "^12.2.1",
+    "firebaseui": "^6.1.0",
+    "google-one-tap": "^1.0.6",
     "lucide-react": "^0.542.0",
     "motion": "^12.23.12",
     "next": "15.4.2",
@@ -30,13 +39,17 @@
     "react-use-measure": "^2.1.7",
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.180.0",
     "usehooks-ts": "^3.1.1",
-    "vaul": "^1.1.2"
+    "vaul": "^1.1.2",
+    "zod": "^4.1.8",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@stylistic/eslint-config": "^1.1.0",
     "@tailwindcss/postcss": "^4.1.13",
+    "@types/google-one-tap": "^1.2.6",
     "@types/node": "^20.19.13",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
