--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "bun run eslint",
-    "lint:fix": "bun run eslint"
+    "lint:fix": "bun run eslint",
+    "fb:es": "firebase emulators:start"
   },
   "dependencies": {
     "@floating-ui/react": "^0.27.16",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
@@ -29,7 +31,7 @@
     "firebase": "^12.2.1",
     "firebaseui": "^6.1.0",
     "google-one-tap": "^1.0.6",
-    "lucide-react": "^0.542.0",
+    "lucide-react": "^0.544.0",
     "motion": "^12.23.12",
     "next": "15.4.2",
     "next-themes": "^0.4.6",
