--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
@@ -31,10 +32,12 @@
     "firebase": "^12.2.1",
     "firebaseui": "^6.1.0",
     "google-one-tap": "^1.0.6",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.12",
     "next": "15.4.2",
     "next-themes": "^0.4.6",
+    "ogl": "^1.0.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
