--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^12.2.1",
@@ -34,7 +35,7 @@
     "google-one-tap": "^1.0.6",
     "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
-    "motion": "^12.23.12",
+    "motion": "^12.23.22",
     "next": "15.4.2",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
