update:admin-scan

--- a/components.json
+++ b/components.json
@@ -23,6 +23,7 @@
     "@kokonutui": "https://kokonutui.com/r/{name}.json",
     "@smoothui": "https://smoothui.dev/r/{name}.json",
     "@cult-ui": "https://cult-ui.com/r/{name}.json",
-    "@animate-ui": "https://animate-ui.com/r/{name}.json"
+    "@animate-ui": "https://animate-ui.com/r/{name}.json",
+    "@magicui": "https://magicui.design/r/{name}.json"
   }
 }
