--- a/package.json
+++ b/package.json
@@ -24,28 +24,37 @@
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
     "@t3-oss/env-nextjs": "^0.13.8",
+    "@upstash/redis": "^1.35.5",
     "animejs": "^4.1.3",
+    "babel-plugin-react-compiler": "^1.0.0",
     "chalk": "^5.6.2",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "easyqrcodejs": "^4.6.2",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^12.2.1",
     "firebaseui": "^6.1.0",
     "google-one-tap": "^1.0.6",
     "gsap": "^3.13.0",
-    "lucide-react": "^0.544.0",
+    "html5-qrcode": "^2.3.8",
+    "lucide-react": "^0.545.0",
     "motion": "^12.23.22",
     "next": "15.4.2",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "qr-code-styling": "^1.9.2",
+    "qrcode": "^1.5.4",
+    "qrcode-svg": "^1.1.0",
+    "radix-ui": "^1.4.3",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-easy-crop": "^5.5.3",
     "react-hot-toast": "^2.6.0",
     "react-use-measure": "^2.1.7",
+    "reactfire": "^4.2.3",
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0",
@@ -60,6 +69,7 @@
     "@tailwindcss/postcss": "^4.1.13",
     "@types/google-one-tap": "^1.2.6",
     "@types/node": "^20.19.13",
+    "@types/qrcode-svg": "^1.1.5",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
