--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
+    "@react-three/rapier": "^2.1.0",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@upstash/redis": "^1.35.5",
     "animejs": "^4.1.3",
@@ -41,6 +42,7 @@
     "gsap": "^3.13.0",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.545.0",
+    "meshline": "^3.3.1",
     "motion": "^12.23.22",
     "next": "15.4.2",
     "next-themes": "^0.4.6",
