--- a/components.json
+++ b/components.json
@@ -24,6 +24,7 @@
     "@smoothui": "https://smoothui.dev/r/{name}.json",
     "@cult-ui": "https://cult-ui.com/r/{name}.json",
     "@animate-ui": "https://animate-ui.com/r/{name}.json",
-    "@magicui": "https://magicui.design/r/{name}.json"
+    "@magicui": "https://magicui.design/r/{name}.json",
+    "@aceternity": "https://ui.aceternity.com/registry/{name}.json"
   }
 }
