--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@upstash/redis": "^1.35.5",
     "animejs": "^4.1.3",
     "babel-plugin-react-compiler": "^1.0.0",
+    "canvas-confetti": "^1.9.3",
     "chalk": "^5.6.2",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
@@ -69,6 +70,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@stylistic/eslint-config": "^1.1.0",
     "@tailwindcss/postcss": "^4.1.13",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/google-one-tap": "^1.2.6",
     "@types/node": "^20.19.13",
     "@types/qrcode-svg": "^1.1.5",
