--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@floating-ui/react": "^0.27.16",
     "@gsap/react": "^2.1.2",
     "@headlessui/react": "^2.2.9",
+    "@origin-space/image-cropper": "^0.1.9",
+    "@paper-design/shaders-react": "^0.0.57",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
@@ -27,6 +31,8 @@
     "@react-three/fiber": "^9.3.0",
     "@react-three/rapier": "^2.1.0",
     "@t3-oss/env-nextjs": "^0.13.8",
+    "@tanstack/react-form": "^1.23.7",
+    "@tanstack/react-table": "^8.21.3",
     "@upstash/redis": "^1.35.5",
     "animejs": "^4.1.3",
     "babel-plugin-react-compiler": "^1.0.0",
@@ -45,7 +51,7 @@
     "gsap": "^3.13.0",
     "html5-qrcode": "^2.3.8",
     "meshline": "^3.3.1",
-    "motion": "^12.23.22",
+    "motion": "^12.23.24",
     "next": "15.4.2",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
