--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.3.0",
     "easyqrcodejs": "^4.6.2",
     "effect": "^3.18.4",
     "embla-carousel-autoplay": "^8.6.0",
@@ -51,6 +52,7 @@
     "google-one-tap": "^1.0.6",
     "gsap": "^3.13.0",
     "html5-qrcode": "^2.3.8",
+    "marked": "^16.4.1",
     "meshline": "^3.3.1",
     "motion": "^12.23.24",
     "next": "15.4.2",
