--- a/package.json
+++ b/package.json
@@ -56,15 +56,15 @@
     "marked": "^16.4.1",
     "meshline": "^3.3.1",
     "motion": "^12.23.24",
-    "next": "15.4.2",
+    "next": "^16.0.0-canary.18",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "qr-code-styling": "^1.9.2",
     "qrcode": "^1.5.4",
     "qrcode-svg": "^1.1.0",
     "radix-ui": "^1.4.3",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-easy-crop": "^5.5.3",
     "react-hot-toast": "^2.6.0",
     "react-use-measure": "^2.1.7",
@@ -85,15 +85,19 @@
     "@types/google-one-tap": "^1.2.6",
     "@types/node": "^20.19.13",
     "@types/qrcode-svg": "^1.1.5",
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
     "eslint": "^9.35.0",
-    "eslint-config-next": "15.4.2",
+    "eslint-config-next": "16.0.0",
     "neostandard": "^0.12.2",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5.9.2"
+  },
+  "overrides": {
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2"
   }
 }
