--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "@floating-ui/react": "^0.27.16",
     "@gsap/react": "^2.1.2",
     "@headlessui/react": "^2.2.9",
+    "@jsdevtools/rehype-toc": "^3.0.2",
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/mdx": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
+    "@next/mdx": "^16.0.0",
     "@origin-space/image-cropper": "^0.1.9",
     "@paper-design/shaders-react": "^0.0.57",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -34,6 +39,7 @@
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tanstack/react-form": "^1.23.7",
     "@tanstack/react-table": "^8.21.3",
+    "@types/mdx": "^2.0.13",
     "@upstash/redis": "^1.35.5",
     "animejs": "^4.1.3",
     "babel-plugin-react-compiler": "^1.0.0",
@@ -69,9 +75,15 @@
     "react-hot-toast": "^2.6.0",
     "react-use-measure": "^2.1.7",
     "reactfire": "^4.2.3",
+    "rehype-parse": "^9.0.1",
+    "rehype-slug": "^6.0.0",
+    "rehype-stringify": "^10.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-toc": "^9.0.0",
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0",
+    "unified": "^11.0.5",
     "usehooks-ts": "^3.1.1",
     "vaul": "^1.1.2",
     "zod": "^4.1.8",
