--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0",
+    "tone": "^15.1.22",
     "unified": "^11.0.5",
     "usehooks-ts": "^3.1.1",
     "vaul": "^1.1.2",
