--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "marked": "^16.4.1",
     "meshline": "^3.3.1",
     "motion": "^12.23.24",
-    "next": "^16.0.0-canary.18",
+    "next": "^16.0.0",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "qr-code-styling": "^1.9.2",
