--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "google-one-tap": "^1.0.6",
     "gsap": "^3.13.0",
     "html5-qrcode": "^2.3.8",
+    "jsonwebtoken": "^9.0.2",
     "marked": "^16.4.1",
     "meshline": "^3.3.1",
     "motion": "^12.23.24",
@@ -87,6 +88,7 @@
     "tone": "^15.1.22",
     "unified": "^11.0.5",
     "usehooks-ts": "^3.1.1",
+    "uuid": "^13.0.0",
     "vaul": "^1.1.2",
     "workflow": "^4.0.1-beta.2",
     "zod": "^4.1.8",
@@ -98,6 +100,7 @@
     "@tailwindcss/postcss": "^4.1.13",
     "@types/canvas-confetti": "^1.9.0",
     "@types/google-one-tap": "^1.2.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.13",
     "@types/qrcode-svg": "^1.1.5",
     "@types/react": "19.2.2",
